--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@
 margin: 10px;
 
 }
+.card-img-top {
+  width: 200px !important;
+  border-top-left-radius: calc(.25rem - 1px);
+  border-top-right-radius: calc(.25rem - 1px);
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -35,7 +40,12 @@ margin: 10px;
 .App-link {
   color: #61dafb;
 }
+a
+{
+color: white !important;
+text-decoration: none;
 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
